media query started

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Holiday Homes & Apartment Rentals-Airbnb 
                    airbnb.co.in</title>
     <link rel="shortcut icon" href="assets/Air.png" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
     <main>
@@ -16,28 +16,29 @@
           <a href="#">Learn More</a>
         </div>
         <header>
-          <div class="logo">
-            <a href="#"><img src="assets/Airbnb.png" alt="airbnb"></a>
-          </div>
-          <div class="center">
-            <div class="curve-border">
-              <a><button>Anywhere</button></a>
-              <a><button>Anyweek</button></a>
-              <a href=""><button>Add guest</button></a>
-              <img src="assets/ssearch.png"> 
-            </div>
-          </div>
+          
+              <div class="logo">
+                <a href="#"><img src="assets/Airbnb.png" alt="airbnb"></a>
+              </div>
+              <div class="center">
+                <div class="curve-border">
+                  <a><button>Anywhere</button></a>
+                  <a><button>Anyweek</button></a>
+                  <a href=""><button>Add guest</button></a>
+                  <img src="assets/ssearch.png"> 
+                </div>
+              </div>
 
-          <div class="right">
-              <a href="#" class="button2" >Airbnb your home</a>
-              <img id="globe" src="assets/internet.png" alt="Globe icon">
-            <div class="icon-group">
-                  <a href="https://www.airbnb.co.in/#simple-header-profile-menu">
-                  <img src="assets/menu.png" alt="Three horizontal lines icon">
-                  <img src="assets/accoount..png" alt="Profile icon"> 
-                  </a>
-            </div>
-          </div>
+              <div class="right">
+                  <a href="#" class="button2" >Airbnb your home</a>
+                  <img id="globe" src="assets/internet.png" alt="Globe icon">
+                <div class="icon-group">
+                      <a href="https://www.airbnb.co.in/#simple-header-profile-menu">
+                      <img src="assets/menu.png" alt="Three horizontal lines icon">
+                      <img src="assets/accoount..png" alt="Profile icon"> 
+                      </a>
+                </div>
+              </div>
           <hr>
         </header>
 
